fix: centrally left align radio inputs

--- a/pages/assets/css/basic.css
+++ b/pages/assets/css/basic.css
@@ -1169,7 +1169,9 @@ button {
 }
 #section-give #payment-form .payment-checkbox {
     padding: 0;
-    margin: 0.5rem 0;
+    margin: 0.5rem auto;
+    width: 250px;
+    text-align: left;
 }
 #section-give #payment-form .payment-checkbox input {
     margin-right: 1rem;
